@@ -1,4 +1,5 @@
 HEAD
+	+ Enable backup event watcher by default
 	+ Improve help message for configuration
 	+ Added eBox Storage from Denver (US)
 1.4
